# TodoAppPetProject

./: .gitignore  Dockerfile  README.md  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: b6432fe37ec5_create_phone_number_for_users_column.py
dependencies/: current_user.py  todo.py  user.py
dependencies/database/: database.py  db.py
models/: todos.py  users.py
routers/: admin.py  auth.py  todos.py  users.py
schemas/: base.py  todos.py  token.py  users.py
security/: breach_checker.py  constants.py  token.py
services/: breach_checker.py  redirection.py  todo_search.py
services/admin/: admin_services.py
services/auth/: auth_services.py
services/todos/: backend_services.py  endpoint_services.py  frontend_services.py  page_services.py
services/users/: user_services.py
static/css/: base.css
static/js/: base.js
templates/: add-todo.html  edit-todo.html  home.html  layout.html  login.html  register.html  todo.html
test/: conftest.py  test_admin.py  test_auth.py  test_example.py  test_main.py  test_todos.py  test_users.py  utils.py
