[project]
name = "todoapppetproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.0.1",
    "black>=25.12.0",
    "fastapi>=0.124.4",
    "passlib>=1.7.4",
    "ruff>=0.14.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
