[project]
name = "todoapppetproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt==4.0.1",
    "black>=25.12.0",
    "fastapi>=0.124.4",
    "passlib>=1.7.4",
    "python-jose[cryptograghy]>=3.5.0",
    "python-multipart>=0.0.20",
    "ruff>=0.14.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
